# ollama-agent

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
ollama_agent/: __init__.py  agent.py  cli.py  config.py  exceptions.py  main.py  session_manager.py  streaming.py  tasks.py  tools.py  tui.py  utils.py
ollama_agent/agent/: __init__.py  agent.py  agent_manager.py  events.py  runner.py  session_manager.py  tools.py
ollama_agent/memory/: __init__.py  bootstrap.py  manager.py
ollama_agent/settings/: configini.py  mcp.py  settings.py
ollama_agent/tui/: app.py  create_task_screen.py  list_modal.py  renderers.py  screens.py  session_list_screen.py  task_list_screen.py
